[package]
name = "msg_proof_test"
version = "0.1.0"
edition = "2021"

[dependencies]
fuels = { version = "0.57.0", features = ["fuel-core-lib"] }
fuel-asm = { version = "0.49.0" }
fuel-tx = "0.48.0"
tokio = { version = "1.12", features = ["rt", "macros"] }
itertools = "0.12.1"

[[bin]]
name = "main"
path = "src/main.rs"
